# orange-crab-playground

./: Makefile  build.sbt  readme.md
src/main/resources/: ram.hex
src/main/rust/orange-crab-app/: Cargo.toml
src/main/rust/orange-crab-app/src/: main.rs  shell.rs
src/main/rust/orange-crab-hal/: Cargo.toml
src/main/rust/orange-crab-hal/src/: led.rs  lib.rs  prelude.rs  serial.rs  timer.rs
src/main/rust/orange-crab-pac/: Cargo.toml  build.rs  orange_crab.svd
src/main/rust/orange-crab-pac/src/: lib.rs
src/main/rust/orange-crab-pac/src/orangecrab/: metadata.rs  mod.rs
src/main/rust/orange-crab-pac/src/orangecrab/instances/: rgbled.rs  system.rs
src/main/rust/orange-crab-pac/src/orangecrab/peripherals/: gpioa.rs  mod.rs  rgbled.rs  system.rs  timer1.rs  uart1.rs
src/main/scala/playground/: Blinky.scala  RiscV.scala
src/main/scala/playground/bsp/: Blackbox.scala  OrangeCrab.scala  orangecrab.lpf
src/main/scala/playground/soc/: Config.scala  Core.scala
src/main/scala/playground/soc/mmio/: Led.scala  System.scala  Timer.scala
